--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
-Welcome to my website
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Hompage</title>
+<style>
+body{
+	background-color: pink;
+}
+</style>
+<script>
+	//alert("you've been hacked!");
+</script>
+	</head>
 
-I'm creating a website in ITD110 this year.
-
-Quiz word: Takin
+	<body>
+		<p>This is my homepage.</p>
+	</body>
+</html>
