--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 	<head>
 		<title>Homepage</title>
-<style>
-body{
-	background-color: pink;
-}
-</style>
-<script>
-	//alert("you've been hacked!");
-</script>
+	<style>
+	body{
+		background-color: #d4f6fa;
+	}
+	</style>
+	<script src="js/validate.js"></script>
 	</head>
 
 	<body>
