added additional information to website

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Homepage</title>
-	<style>
-	body{
-		background-color: #d4f6fa;
-	}
-	</style>
-	<script src="js/validate.js"></script>
-	</head>
+<head>
+	<title>Homepage</title>
+<style>
+.center-paragraph{
+	text-align: center;
+}
+h1{ text-align: center;}
+body{
+	background-color: #d4f6fa;
+}
+</style>
+<script src="js/validate.js"></script>
+</head>
 
-	<body>
-		<p>This is my homepage.</p>
-	</body>
+<body>
+	<h1>Welcome!</h1>
+	<p>I will be using this webpage to show my progression and scores in rhythm games I have been playing!</p>
+	<hr>
+	<h3>My Favorite Quote</h3>
+	<p><q>I would have really liked just doing laundry and taxes with you</q><cite> - Waymond Wang, in Everything Everywhere All At Once (2022)</cite></p>
+</body>
 </html>
