changed HTML validator source

--- a/practice/schedule.html
+++ b/practice/schedule.html
@@ -10,7 +10,7 @@ th, td {
 	border: 1px solid;
 }
 </style>
-<script src="js/validate.js"></script>
+<script src="../js/validate.js"></script>
 		<title>Albii's Schedule</title>
 	</head>
 
