--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@ body{
 	<hr>
 	<h3>My Favorite Quote</h3>
 	<p><q>I would have really liked just doing laundry and taxes with you</q><cite> - Waymond Wang, in Everything Everywhere All At Once (2022)</cite></p>
+	<img src="images/personalPic.JPG" alt="Picture of me and my friend beofre homecoming" width="240" height="426">
 </body>
 </html>
