added hyperlinks (placeholders) + home macbook link test

--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@ body{
 
 <body>
 	<h1>Welcome!</h1>
+    <div style="display:flex; justify-content:center; gap:24px;">
+        <a href="aboutMe.html">About Me!</a>
+        <a href="https://www.google.com">Place Holder</a>
+    </div>
 	<p>I will be using this webpage to show my progression and scores in rhythm games I have been playing!</p>
 	<hr>
 	<h3>My Favorite Quote</h3>
 	<p><q>I would have really liked just doing laundry and taxes with you</q><cite> - Waymond Wang, in Everything Everywhere All At Once (2022)</cite></p>
-	<img src="images/personalPic.JPG" alt="Picture of me and my friend beofre homecoming" width="240" height="426">
+	<img src="images/personalPic.JPG" alt="Picture of me and my friend before  homecoming" width="240" height="426">
 </body>
 </html>
