updated information in the project recipes gj dsad

--- a/projects/recipes/1.html
+++ b/projects/recipes/1.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My Recipes</title>
+        <title>Da Ua</title>
+<style>
+body{
+    background-color:#ddd;
+}
+
+p{
+    font-size:18px;
+}
+</style>
         <script src="../../js/validate.js"></script>
     </head>
 
     <body>
-        <h1>Welcome to my recipe page</h1>
+        <a href="index.html"><img src="images/home.png" alt="home button" width="50" height="50"></a>
+        <div style="display:flex; justify-content:center;">
+            <div style="display:flex; flex-direction:column;
+                align-content:center; text-align:center;">
+                <div style="display:flex; justify-content:center; gap:10px; align-items:baseline; margin-top:220px; ">
+                    <p style="font-size:85px; margin: 0;">Da Ua</p>
+                    <p style="font-size:75px; margin: 0;">(yah oo-uh)</p>
+                </div>    
+                <p style=" max-width:525px;">
+                A Vietnamese yogurt, usually homemade, that brings a flavor
+                of home to Vietnamese immigrants. I remember my mom and my aunt 
+                would make endless amounts of them in tiny bags that is then 
+                frozen.</p>
+                <p>Here are the ingredients and steps below!</p>
+                <table>
+                    <caption>Ingredients & Amount</caption>
+                    <th>Items</th>
+                </table>
+                
+            </div>
+            <img style="margin-top: 50px;" src="images/daUa2.png" alt="" width="500" height="500">
+        </div>
     </body>
 
 </html>
