--- a/projects/recipes/index.html
+++ b/projects/recipes/index.html
@@ -6,16 +6,24 @@
     </head>
 
     <body>
-        <h1 style="text-align:center;">Welcome to my recipe page</h1>
+        <h1 style="text-align:center;">Xin Chao! Welcome to my recipe page</h1>
         <div style="display:flex; justify-content:space-evenly; 
         font-size:20px">
-            <div style="display:flex; flex-direction:column;">
+            <div style="display:flex; flex-direction:column;
+                text-align:center;">
+
                 <a href="1.html">Da Ua</a>
-                <img src="images/daUa.jpg" alt="Da Ua in bags" width="240" height="240">
+                <img src="images/daUa.jpg" alt="Da Ua in bags" width="240"
+                height="240">
+
             </div>
-            <div style="display:flex; flex-direction:column;">
+            <div style="display:flex; flex-direction:column;
+                text-align:center;">
+
                 <a href="2.html">Banh Mi</a>
-                <img src="images/daUa.jpg" alt="Da Ua in bags" width="240" height="240">  
+                <img src="images/banhMi.jpg" alt="Banh Mi with cilantro and 
+                pickled carrots" width="240" height="240">
+
             </div>
 
         </div>
