updated da uo page with table and plan to add instructions

--- a/projects/recipes/1.html
+++ b/projects/recipes/1.html
@@ -3,6 +3,13 @@
     <head>
         <title>Da Ua</title>
 <style>
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 10px;
+}
+
+
 body{
     background-color:#ddd;
 }
@@ -15,11 +22,13 @@ p{
     </head>
 
     <body>
-        <a href="index.html"><img src="images/home.png" alt="home button" width="50" height="50"></a>
+        <a href="index.html"><img src="images/home.png" alt="home button" 
+        style="margin:0;" width="50" height="50"></a>
         <div style="display:flex; justify-content:center;">
             <div style="display:flex; flex-direction:column;
                 align-content:center; text-align:center;">
-                <div style="display:flex; justify-content:center; gap:10px; align-items:baseline; margin-top:220px; ">
+                <div style="display:flex; justify-content:center; gap:10px; 
+                align-items:baseline; margin-top:65px; ">
                     <p style="font-size:85px; margin: 0;">Da Ua</p>
                     <p style="font-size:75px; margin: 0;">(yah oo-uh)</p>
                 </div>    
@@ -28,15 +37,38 @@ p{
                 of home to Vietnamese immigrants. I remember my mom and my aunt 
                 would make endless amounts of them in tiny bags that is then 
                 frozen.</p>
-                <p>Here are the ingredients and steps below!</p>
+                <p>Here are the ingredients and steps below to make 
+                <b>2 servings</b>!</p>
                 <table>
-                    <caption>Ingredients & Amount</caption>
-                    <th>Items</th>
+                    <caption>Ingredients and Amount</caption>
+                    <tr>
+                        <th>Items</th>
+                        <th>Amount</th>
+                    </tr>
+                    <tr>
+                        <td>Whole milk</td>
+                        <td>1 cup</td>
+                    </tr>
+                    <tr>
+                        <td>Agar agar powder</td>
+                        <td>0.38 teaspoon</td>
+                    </tr>
+                    <tr>
+                        <td>Condensed milk</td>
+                        <td>0.13 cup</td>
+                    </tr>
+                    <tr>
+                        <td>Yogurt<sup>*</sup></td>
+                        <td>1.25 oz</td>
+                    </tr>
                 </table>
+                <p><sup>*</sup> = Must contain live and active cultures</p>
                 
             </div>
-            <img style="margin-top: 50px;" src="images/daUa2.png" alt="" width="500" height="500">
+            <img style="margin-top: 50px;" src="images/daUa2.png" alt="" 
+            width="500" height="500">
         </div>
+        <h1 style="font-size:75px; text-align:center;">1</h1>
     </body>
 
 </html>
