added instructions to da ua

--- a/projects/recipes/1.html
+++ b/projects/recipes/1.html
@@ -62,13 +62,59 @@ p{
                         <td>1.25 oz</td>
                     </tr>
                 </table>
+                <p>Some equiptment that will be used as well are:</p>
+                <ul>
+                    <li>a glass bowl (could be any bowl)
+                    <li>an instant read thermometer</li>
+                    <li>a yogurt machine with jars</li>
+                </ul>
                 <p><sup>*</sup> = Must contain live and active cultures</p>
                 
             </div>
             <img style="margin-top: 50px;" src="images/daUa2.png" alt="" 
             width="500" height="500">
         </div>
-        <h1 style="font-size:75px; text-align:center;">1</h1>
+        <div style="text-align:center;">
+        <h1 style="font-size:75px;">1</h1>
+        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        Combine about 25% of the milk and agar agar powder in a sauce pan
+        and mix thoroughly. To warm and activate the agar agar, 
+        cook over medium heat until you hit a low boil for 1-2 minutes,
+        then remove from heat.</p>
+
+        <h1 style="font-size:75px;">2</h1>
+        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        In a large glass or microwave safe bowl, combine the condensed milk
+        and about 25% (same amount used earlier) of the milk and microwave for
+        two minutes on high so they incorporate and warm up a bit,
+        then stir well.</p>
+
+        <h1 style="font-size:75px;">3</h1>
+        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        Combine both mixtures above in the large bowl, then add all the 
+        remaining milk.</p>
+
+         <h1 style="font-size:75px;">4</h1>
+        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        Mix well and check the temperature to make sure it’s between 90-100 °F.
+        </p>
+
+         <h1 style="font-size:75px;">5</h1>
+        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        Combine both mixtures above in the large bowl, then add all the 
+        remaining milk.</p>
+
+         <h1 style="font-size:75px;">6</h1>
+        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        Combine both mixtures above in the large bowl, then add all the 
+        remaining milk.</p>
+
+         <h1 style="font-size:75px;">7</h1>
+        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        Combine both mixtures above in the large bowl, then add all the 
+        remaining milk.</p>
+
+        </div>
     </body>
 
 </html>
