removed unneccessary styling that I didn't read about (oops) + replaced da ua image

--- a/projects/recipes/1.html
+++ b/projects/recipes/1.html
@@ -24,22 +24,19 @@ p{
     <body>
         <a href="index.html"><img src="images/home.png" alt="home button" 
         style="margin:0;" width="50" height="50"></a>
-        <div style="display:flex; justify-content:center;">
-            <div style="display:flex; flex-direction:column;
-                align-content:center; text-align:center;">
-                <div style="display:flex; justify-content:center; gap:10px; 
-                align-items:baseline; margin-top:65px; ">
-                    <p style="font-size:85px; margin: 0;">Da Ua</p>
-                    <p style="font-size:75px; margin: 0;">(yah oo-uh)</p>
-                </div>    
-                <p style=" max-width:525px;">
-                A Vietnamese yogurt, usually homemade, that brings a flavor
-                of home to Vietnamese immigrants. I remember my mom and my aunt 
-                would make endless amounts of them in tiny bags that is then 
-                frozen.</p>
-                <p>Here are the ingredients and steps below to make 
-                <b>2 servings</b>!</p>
-                <table>
+        <p style="font-size:85px; margin:0;">Da Ua (yah-ooah)</p>
+            
+            <img src="images/daUa2.jpg" alt="" 
+            width="500" height="500">
+        <p style=" max-width:525px;">
+        A Vietnamese yogurt, usually homemade, that brings a flavor
+        of home to Vietnamese immigrants. I remember my mom and my aunt 
+        would make endless amounts of them in tiny bags that is then 
+        frozen.<br><q>This was my childhood before moving to the US
+        so young.</q><br> - My Aunt.</p>
+        <p>Here are the ingredients and steps below to make 
+        <b>2 servings</b> in about <b>8 hours</b>!</p>
+        <table>
                     <caption>Ingredients and Amount</caption>
                     <tr>
                         <th>Items</th>
@@ -70,51 +67,45 @@ p{
                 </ul>
                 <p><sup>*</sup> = Must contain live and active cultures</p>
                 
-            </div>
-            <img style="margin-top: 50px;" src="images/daUa2.png" alt="" 
-            width="500" height="500">
-        </div>
-        <div style="text-align:center;">
         <h1 style="font-size:75px;">1</h1>
-        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        <p style="max-width: 665px;">
         Combine about 25% of the milk and agar agar powder in a sauce pan
         and mix thoroughly. To warm and activate the agar agar, 
         cook over medium heat until you hit a low boil for 1-2 minutes,
         then remove from heat.</p>
 
         <h1 style="font-size:75px;">2</h1>
-        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        <p style="max-width: 665px;">
         In a large glass or microwave safe bowl, combine the condensed milk
         and about 25% (same amount used earlier) of the milk and microwave for
         two minutes on high so they incorporate and warm up a bit,
         then stir well.</p>
 
         <h1 style="font-size:75px;">3</h1>
-        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        <p style="max-width: 665px;">
         Combine both mixtures above in the large bowl, then add all the 
         remaining milk.</p>
 
          <h1 style="font-size:75px;">4</h1>
-        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        <p style="max-width: 665px;">
         Mix well and check the temperature to make sure it’s between 90-100 °F.
         </p>
 
          <h1 style="font-size:75px;">5</h1>
-        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        <p style="max-width: 665px;">
         Combine both mixtures above in the large bowl, then add all the 
         remaining milk.</p>
 
          <h1 style="font-size:75px;">6</h1>
-        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        <p style="max-width: 665px">
         Combine both mixtures above in the large bowl, then add all the 
         remaining milk.</p>
 
          <h1 style="font-size:75px;">7</h1>
-        <p style="max-width: 665px; margin-left:auto; margin-right:auto;">
+        <p style="max-width: 665px;">
         Combine both mixtures above in the large bowl, then add all the 
         remaining milk.</p>
 
-        </div>
     </body>
 
 </html>
