--- a/projects/recipes/1.html
+++ b/projects/recipes/1.html
@@ -22,21 +22,31 @@ p{
     </head>
 
     <body>
-        <a href="index.html"><img src="images/home.png" alt="home button" 
-        style="margin:0;" width="50" height="50"></a>
-        <p style="font-size:85px; margin:0;">Da Ua (yah-ooah)</p>
-            
-            <img src="images/daUa2.jpg" alt="" 
-            width="500" height="500">
-        <p style=" max-width:525px;">
-        A Vietnamese yogurt, usually homemade, that brings a flavor
-        of home to Vietnamese immigrants. I remember my mom and my aunt 
-        would make endless amounts of them in tiny bags that is then 
-        frozen.<br><q>This was my childhood before moving to the US
-        so young.</q><br> - My Aunt.</p>
-        <p>Here are the ingredients and steps below to make 
-        <b>2 servings</b> in about <b>8 hours</b>!</p>
-        <table>
+        <header>
+            <nav>
+            <a href="index.html">
+                <img src="images/home.png" alt="home button" style="margin:0;"
+                width="50" height="50">
+            </a>
+            </nav>
+            <p style="font-size:85px; margin:0;">Da Ua (yah-ooah)</p>
+        </header> 
+        <main>
+            <figure>
+                <img src="images/daUa2.jpg" alt="" 
+                width="500" height="500">    
+            </figure>    
+            <p style=" max-width:525px;">
+            A Vietnamese yogurt, usually homemade, that brings a flavor
+            of home to Vietnamese immigrants. I remember my mom and my aunt 
+            would make endless amounts of them in tiny bags that is then 
+            frozen.<br>
+            <q>This was my childhood before moving to the US
+            so young.</q><br> - My Aunt.</p>
+
+            <p>Here are the ingredients and steps below to make 
+            <b>2 servings</b> in about <b>8 hours</b>!</p>
+            <table>
                     <caption>Ingredients and Amount</caption>
                     <tr>
                         <th>Items</th>
@@ -58,54 +68,55 @@ p{
                         <td>Yogurt<sup>*</sup></td>
                         <td>1.25 oz</td>
                     </tr>
-                </table>
-                <p>Some equiptment that will be used as well are:</p>
-                <ul>
-                    <li>a glass bowl (could be any bowl)
-                    <li>an instant read thermometer</li>
-                    <li>a yogurt machine with jars</li>
-                </ul>
-                <p><sup>*</sup> = Must contain live and active cultures</p>
+            </table>
+            <p>Some equiptment that will be used as well are:</p>
+            <ul>
+                <li>a glass bowl (could be any bowl)
+                <li>an instant read thermometer</li>
+                <li>a yogurt machine with jars</li>
+            </ul>
+            <p><sup>*</sup> = Must contain live and active cultures</p>
                 
-        <h1 style="font-size:75px;">1</h1>
-        <p style="max-width: 665px;">
-        Combine about 25% of the milk and agar agar powder in a sauce pan
-        and mix thoroughly. To warm and activate the agar agar, 
-        cook over medium heat until you hit a low boil for 1-2 minutes,
-        then remove from heat.</p>
+            <h1 style="font-size:75px;">1</h1>
+            <p style="max-width: 665px;">
+            Combine about 25% of the milk and agar agar powder in a sauce pan
+            and mix thoroughly. To warm and activate the agar agar, 
+            cook over medium heat until you hit a low boil for 1-2 minutes,
+            then remove from heat.</p>
 
-        <h1 style="font-size:75px;">2</h1>
-        <p style="max-width: 665px;">
-        In a large glass or microwave safe bowl, combine the condensed milk
-        and about 25% (same amount used earlier) of the milk and microwave for
-        two minutes on high so they incorporate and warm up a bit,
-        then stir well.</p>
+            <h1 style="font-size:75px;">2</h1>
+            <p style="max-width: 665px;">
+            In a large glass or microwave safe bowl, combine the condensed milk
+            and about 25% (same amount used earlier) of the milk and 
+            microwave for two minutes on high so they incorporate and 
+            warm up a bit then stir well.</p>
 
-        <h1 style="font-size:75px;">3</h1>
-        <p style="max-width: 665px;">
-        Combine both mixtures above in the large bowl, then add all the 
-        remaining milk.</p>
+            <h1 style="font-size:75px;">3</h1>
+            <p style="max-width: 665px;">
+            Combine both mixtures above in the large bowl, then add all the 
+            remaining milk.</p>
 
-         <h1 style="font-size:75px;">4</h1>
-        <p style="max-width: 665px;">
-        Mix well and check the temperature to make sure it’s between 90-100 °F.
-        </p>
+            <h1 style="font-size:75px;">4</h1>
+            <p style="max-width: 665px;">
+            Mix well and check the temperature to make sure 
+            it’s between 90-100 °F.
+            </p>
 
-         <h1 style="font-size:75px;">5</h1>
-        <p style="max-width: 665px;">
-        Combine both mixtures above in the large bowl, then add all the 
-        remaining milk.</p>
+            <h1 style="font-size:75px;">5</h1>
+            <p style="max-width: 665px;">
+            Combine both mixtures above in the large bowl, then add all the 
+            remaining milk.</p>
 
-         <h1 style="font-size:75px;">6</h1>
-        <p style="max-width: 665px">
-        Combine both mixtures above in the large bowl, then add all the 
-        remaining milk.</p>
+            <h1 style="font-size:75px;">6</h1>
+            <p style="max-width: 665px">
+            Combine both mixtures above in the large bowl, then add all the 
+            remaining milk.</p>
 
-         <h1 style="font-size:75px;">7</h1>
-        <p style="max-width: 665px;">
-        Combine both mixtures above in the large bowl, then add all the 
-        remaining milk.</p>
-
+            <h1 style="font-size:75px;">7</h1>
+            <p style="max-width: 665px;">
+            Combine both mixtures above in the large bowl, then add all the 
+            remaining milk.</p>
+        </main>
     </body>
 
 </html>
