basically copied 1.html to 2.html and replaced the info

--- a/projects/recipes/2.html
+++ b/projects/recipes/2.html
@@ -1,13 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My Recipes</title>
+        <title>Bánh Mì</title>
+<style>
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 10px;
+}
+
+
+body{
+    background-color:#ddd;
+}
+
+p{
+    font-size:18px;
+}
+</style>
         <script src="../../js/validate.js"></script>
     </head>
 
     <body>
-        <h1>Welcome to my recipe page</h1>
+        <header>
+            <nav>
+            <a href="index.html">
+                <img src="images/home.png" alt="home button" style="margin:0;"
+                width="50" height="50">
+            </a>
+            </nav>
+            <p style="font-size:85px; margin:0;">Bánh Mì (bah-n mee)</p>
+        </header> 
+        <main>
+            <figure>
+                <img src="images/banhMi2.png" alt="" 
+                width="500" height="500">    
+            </figure>    
+            <p style=" max-width:525px;">
+            This Vietnamese sandwich came into my life very often when on road
+            trips. They are very easy to make and way more delicious than
+            normal sandwiches in my opinion.
+            <br>
+            <q>I would walk down the streets and see many banh mi vendors.
+            Making Banh Mi always reminded me of Vietnam.</q><br> - My Mom</p>
+
+            <p>Here are the ingredients and steps below to make 
+            <b>2 servings</b> in about <b>30 minutes</b>!</p>
+            <table>
+                    <caption>Ingredients and Amount</caption>
+                    <tr>
+                        <th>Items</th>
+                        <th>Amount</th>
+                    </tr>
+                    <tr>
+                        <td>Baguette</td>
+                        <td>2 small Vietnamese-style Baguettes</td>
+                    </tr>
+                    <tr>
+                        <td>Grilled Pork (or chicken/tofu)</td>
+                        <td>8 oz, thinly slices</td>
+                    </tr>
+                    <tr>
+                        <td>Pickled Daikon and Carrots</td>
+                        <td>1/2 cup each</td>
+                    </tr>
+                    <tr>
+                        <td>Cucumber Slices</td>
+                        <td>1/4 cucumber, thinly sliced</td>
+                    </tr>
+                    <tr>
+                        <td>Fresh Cilantro</td>
+                        <td>Handful</td>
+                    </tr>
+                    <tr>
+                        <td>Mayonnaise</td>
+                        <td>2 tbsp</td>
+                    </tr>
+                    <tr>
+                        <td>Soy sauce</td>
+                        <td>1 tbsp</td>
+                    </tr>
+                    <tr>
+                        <td>Pate (optional)</td>
+                        <td>2 tbsp</td>
+                    </tr>
+            </table>
+            <p>Some equiptment that will be used as well are:</p>
+            <ul>
+                <li>Knife and cutting board</li>
+                <li>Grill pan</li>
+                <li>Small bowl for pickles</li>
+            </ul>
+
+            <h1 style="font-size:75px;">1</h1>
+            <p style="max-width: 665px;">
+            Prepare the pickled vegetables by mixing julienned daikon and
+            carrots with vinegar, sugar, and salt. Let sit for at least 15 minutes.
+            </p>
+
+            <h1 style="font-size:75px;">2</h1>
+            <p style="max-width: 665px;">
+            Grill or pan-sear your pork (or chicken/tofu) until fully cooked
+            and slightly caramelized.</p>
+
+            <h1 style="font-size:75px;">3</h1>
+            <p style="max-width: 665px;">
+            Slice the baguettes lengthwise, leaving one side connected.
+            Toast lightly if desired.</p>
+
+            <h1 style="font-size:75px;">4</h1>
+            <p style="max-width: 665px;">
+            Spread mayonnaise and pâté on both sides of the baguette.
+            Layer with grilled meat, cucumber slices, pickled vegetables,
+            and cilantro.
+            </p>
+
+            <h1 style="font-size:75px;">5</h1>
+            <p style="max-width: 665px;">
+            Drizzle a bit of soy sauce</p>
+
+            <h1 style="font-size:75px;">6</h1>
+            <p style="max-width: 665px">
+            Combine both mixtures above in the large bowl, then add all the
+            remaining milk.</p>
+
+            <h1 style="font-size:75px;">7</h1>
+            <p style="max-width: 665px;">
+            lose the sandwich gently and serve warm or at room temperature.
+            Enjoy your homemade <b>Bánh Mì!</b></p>
+        </main>
     </body>
 
 </html>
+
 
